# q-orca-kb

./: .gitattributes  .gitignore  index_local_pdf.py  pyproject.toml  q-orca-kb-bug-report.md
data/: jobs.json  web_index.json
data/palace/: chroma.sqlite3
data/palace/88a596c8-d0f4-4d2a-9532-10c384cc17a5/: index_metadata.pickle
q_orca_kb/: __init__.py  cli.py  mcp_server.py  pipeline.py  seeds.py
q_orca_kb/crawlers/: __init__.py  site_configs.py
q_orca_kb/extractors/: pdf_extractor.py  web_extractor.py
q_orca_kb/fetchers/: arxiv_fetcher.py  web_crawler.py
q_orca_kb/indexers/: mempalace_indexer.py
tests/: test_list_sources.py  test_mcp_crawl_site.py  test_web_crawler.py  test_web_extractor.py
workflows/: paper_indexing.orca.md
